# ModManager

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Recorder.cpp  Recorder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
